# leuchtturm

./: .env  .fallowrc.json  .fallowrc.jsonc  .gitignore  .mcp.json  .npmrc  .prettierignore  .sops.yaml  AGENTS.md  Cargo.toml  EFFECT_PLATFORM_INDEX.md  EFFECT_PLATFORM_QUICK_START.md  EFFECT_PLATFORM_RESEARCH.md  HONO_API_INVENTORY.md  HONO_SOURCE_REFERENCE.md  MIGRATION_INDEX.md  README.md  aube-lock.yaml  aube-workspace.yaml  data-model-early.md  data-model.md  devenv.nix  devenv.yaml  docker-compose.dev.yaml  email.md  flake.nix  fnox.toml  justfile  knip.json  opencode.json  oxfmt.config.ts  oxlint.config.ts  package-lock.json  package.json  plan-platform.md  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  review.md  rustfmt.toml  (+11 more)
.code-review/: 2026-03-22-215001-163.md  2026-03-22-215008-275.md  2026-03-22-215045-693.md  2026-03-22-215052-123.md  2026-03-22-215108-967.md  2026-03-22-215127-130.md  2026-03-22-215148-233.md  2026-03-23-074324-856.md  2026-03-23-104239-792.md  2026-03-24-212922-840.md  2026-03-24-212940-313.md  2026-03-24-213154-409.md  2026-03-24-213220-860.md  2026-03-24-213359-967.md  2026-03-24-213445-496.md  2026-03-24-213504-834.md  2026-03-24-213532-294.md  2026-03-24-213547-868.md  2026-03-24-213628-767.md  2026-03-24-213643-721.md  2026-03-30-201401-570.md  2026-03-30-202007-671.md  2026-03-30-202013-837.md  2026-03-30-202020-582.md  2026-03-30-202107-003.md  2026-03-30-202156-641.md  2026-03-30-204235-347.md  2026-03-30-204722-623.md  2026-03-30-204839-681.md  2026-03-30-204843-697.md  2026-03-30-204854-653.md  2026-03-30-204900-421.md  2026-03-30-204904-797.md  2026-03-30-204915-979.md  2026-03-31-121648-662.md  2026-03-31-121652-556.md  2026-03-31-121701-619.md  2026-03-31-121711-116.md  2026-03-31-152929-267.md  2026-05-12-194641-395.md  (+9 more)
.cog/: .gitignore  MEM_BOOTSTRAP.md  MEM_BOOTSTRAP_ASSOCIATE.md  bootstrap-checkpoint.json  brain.db-shm  brain.db-wal  client-context.json  settings.json
.pi/: mcp.json
crates/leuchtturm-web/: Cargo.toml
crates/leuchtturm-web/src/: config.rs  database.rs  htmx.rs  lib.rs  router.rs  template.rs  util.rs  web_error.rs
crates/leuchtturm-web/src/routes/: login.rs  mod.rs  signup.rs
crates/leuchtturm-web/src/templates/: _base.html  index.html  login.html
crates/leuchtturm-web/src/templates/components/: button.html
(+573 files in other folders)
