[package]
name = "leuchtturm"
version = "0.1.0"
authors = ["Christoph Schmatzler <christoph@medium.place>"]
edition = "2021"
publish = false

[workspace]
members = [".", "crates/*"]

[workspace.dependencies]
chrono = "0.4.23"
leuchtturm-core = { path = "crates/leuchtturm-core" }
leuchtturm-migrations = { path = "crates/leuchtturm-migrations" }
leuchtturm-web = { path = "crates/leuchtturm-web" }
sqlx = { version = "0.6.2", features = ["chrono", "postgres", "runtime-tokio-rustls"] }
thiserror = "1.0.38"

[dependencies]
leuchtturm-migrations.workspace = true
leuchtturm-web.workspace = true
sqlx.workspace = true
thiserror.workspace = true
clap = { version = "4.0.29", features = ["cargo", "derive", "env"] }
color-eyre = "0.6.2"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.11.0", features = ["tls"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.8.3", features = ["tls", "tls-roots"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
