[package]
name = "leuchtturm-web"
version = "0.1.0"
edition = "2021"

[dependencies]
leuchtturm-core.workspace = true
sqlx.workspace = true
thiserror.workspace = true
axum = "0.6.1"
lazy_static = "1.4.0"
tera = "1.17.1"
tower-http = { version = "0.3.5", features = ["trace"] }
serde = { version = "1.0.151", features = ["derive"] }
